--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial Git/GitHub</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Brahian Cortes</h1>
-    <h2>Tutorial Git/GitHub</h2>
+    <div class="contenedor">
+        <h1>Brahian Cortes</h1>
+        <h2>Tutorial Git/GitHub</h2>
+    </div>
 </body>
 </html>
