--- a/ej_compartido/barona.html
+++ b/ej_compartido/barona.html
@@ -8,8 +8,8 @@
 <body>
     <script>
         console.log("Archivo de prueba");
-        
-        alert("Mensaje de prueba");
+
+        aler("Mensaje de prueba");
     </script>
 </body>
 </html>
