--- a/ej_compartido/eje_HDY.html
+++ b/ej_compartido/eje_HDY.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-   <center><h1>Holii HDY</h1</center> 
+   <center><h1>Holii HDY</h1></center> 
    <hr>
 </body>
 </html>
